// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress demo -- base 1`] = `
.c15 {
  height: 8px;
}

.c16 {
  width: 100%;
  height: 100%;
  border: 1px solid #c3cad9;
  border-radius: 6px;
  background: #fff;
}

.c17 {
  background: #4683e6;
  height: 100%;
  border-radius: 6px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  width: 10%;
}

.c18 {
  position: absolute;
  right: 0;
  top: -17px;
}

.c19 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.c19:before,
.c19:after {
  content: ' ';
  display: table;
}

.c19:after {
  clear: both;
}

.c20 {
  float: right;
}

.c9 {
  vertical-align: baseline;
}

.c12 {
  position: relative;
}

.c14 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c8 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  box-shadow: 0 2px 4px 0 #e4e5f2,0 1px 1px 0 rgba(162,166,191,0.32),0 1px 0 0 rgba(223,224,241,0.7);
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #dfe0f1;
  padding-right: 22px;
  border-right-width: 0;
}

.c6 .c13 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c6 .c13::-webkit-input-placeholder {
  color: #abb4c3;
}

.c6 .c13::-moz-placeholder {
  color: #abb4c3;
}

.c6 .c13:-ms-input-placeholder {
  color: #abb4c3;
}

.c6 .c13::placeholder {
  color: #abb4c3;
}

.c6:hover {
  border-color: #c3cad9;
}

.c6 .c11 {
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  background: #fafafc;
}

.c6 .c11:hover {
  background: #f6f6fb;
}

.c6 .c13 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c6 .c7,
.c6 .c10 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c6 .c7:hover,
.c6 .c10:hover {
  color: #3555f6;
}

.c6 .c7 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c6 .c10 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #e8e9f5;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        percent
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c6"
        >
          <div>
            <span
              class="c7 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c8"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c9"
                type="caret-up"
              />
            </span>
            <span
              class="c10 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c8"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c9"
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="c11 uc-fe-numberinput-input-wrap c12"
          >
            <input
              autocomplete="off"
              class="c13 uc-fe-numberinput-input c14"
              max="100"
              min="0"
              step="1"
              value="10"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
    style="padding:24px;"
  >
    <div>
      <div
        class="c15"
      >
        <div
          class="c16"
        >
          <div
            class="c17"
          >
            <span
              class="c18"
            >
              10%
            </span>
          </div>
        </div>
      </div>
      <span
        class="c19"
      >
        <span>
          0%
        </span>
        <span
          class="c20"
        >
          100%
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress demo -- format 1`] = `
.c15 {
  height: 8px;
}

.c16 {
  width: 100%;
  height: 100%;
  border: 1px solid #c3cad9;
  border-radius: 6px;
  background: #fff;
}

.c17 {
  background: #4683e6;
  height: 100%;
  border-radius: 6px;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  position: relative;
  width: 10%;
}

.c18 {
  position: absolute;
  right: 0;
  top: -17px;
}

.c19 {
  position: relative;
  height: 18px;
  line-height: 18px;
}

.c19:before,
.c19:after {
  content: ' ';
  display: table;
}

.c19:after {
  clear: both;
}

.c20 {
  float: right;
}

.c9 {
  vertical-align: baseline;
}

.c12 {
  position: relative;
}

.c14 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c8 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  box-shadow: 0 2px 4px 0 #e4e5f2,0 1px 1px 0 rgba(162,166,191,0.32),0 1px 0 0 rgba(223,224,241,0.7);
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #dfe0f1;
  padding-right: 22px;
  border-right-width: 0;
}

.c6 .c13 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c6 .c13::-webkit-input-placeholder {
  color: #abb4c3;
}

.c6 .c13::-moz-placeholder {
  color: #abb4c3;
}

.c6 .c13:-ms-input-placeholder {
  color: #abb4c3;
}

.c6 .c13::placeholder {
  color: #abb4c3;
}

.c6:hover {
  border-color: #c3cad9;
}

.c6 .c11 {
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  background: #fafafc;
}

.c6 .c11:hover {
  background: #f6f6fb;
}

.c6 .c13 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c6 .c7,
.c6 .c10 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c6 .c7:hover,
.c6 .c10:hover {
  color: #3555f6;
}

.c6 .c7 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c6 .c10 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #e8e9f5;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="2"
      >
        percent
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c6"
        >
          <div>
            <span
              class="c7 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c8"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c9"
                type="caret-up"
              />
            </span>
            <span
              class="c10 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c8"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c9"
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="c11 uc-fe-numberinput-input-wrap c12"
          >
            <input
              autocomplete="off"
              class="c13 uc-fe-numberinput-input c14"
              max="100"
              min="0"
              step="1"
              value="10"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
    style="padding:24px;"
  >
    <div>
      <div
        class="c15"
      >
        <div
          class="c16"
        >
          <div
            class="c17"
          >
            <span
              class="c18"
            >
              10.00%
            </span>
          </div>
        </div>
      </div>
      <span
        class="c19"
      >
        <span>
          0.00%
        </span>
        <span
          class="c20"
        >
          100.00%
        </span>
      </span>
    </div>
  </div>
</div>
`;
